syntax = "proto3";

package api.blog.v1;

import "google/api/annotations.proto";

// the validate rules:
// https://github.com/envoyproxy/protoc-gen-validate
//import "validate/validate.proto";

option go_package = "blog/api/blog/v1;v1";
option java_multiple_files = true;
option java_package = "api.blog.v1";

service Blog {
	rpc CreateBlog (CreateBlogRequest) returns (CreateBlogReply) {
//		option (google.api.http) = {
//			post: "/v1/blog/"
//			body: "*"
//		};
	};
	rpc UpdateBlog (UpdateBlogRequest) returns (UpdateBlogReply){
//		option (google.api.http) = {
//			put: "/v1/blog/{id}"
//			body: "*"
//		};
	};
	rpc DeleteBlog (DeleteBlogRequest) returns (DeleteBlogReply){
//		option (google.api.http) = {
//			delete: "/v1/blog/{id}"
//		};
	};
	rpc GetBlog (GetBlogRequest) returns (GetBlogReply){
//		option (google.api.http) = {
//			get: "/v1/blog/{id}"
//		};
	};
	rpc ListBlog (ListBlogRequest) returns (ListBlogReply) {
		option (google.api.http) = {
			get: "/v1/blog/"
		};
	};
}

// service和message名字也不能冲突
//message Article {
//	int64 id = 1;
//	string title = 2;
//	string content = 3;
//	int64 like = 4;
//}

message CreateBlogRequest {}
message CreateBlogReply {}

message UpdateBlogRequest {}
message UpdateBlogReply {}

message DeleteBlogRequest {}
message DeleteBlogReply {}

message GetBlogRequest {}
message GetBlogReply {}

message ListBlogRequest {}
message ListBlogReply {}